# Amognus_Juustud

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.py  hooks.cs  inject.c  override.c  parse.c  parse.h  player_classes.cs
include/: .offsets.h.example  game.h  game_helpers.h  game_hooks.h  game_internal.h  hooks.h  io.h  offsets.h  override.h  parse.h  renderer.h  trampoline.h  types.h  utils.h
include/glad/: glad.h
shaders/: shader.fs  shader.vs
src/: game.c  game_helpers.c  game_hooks.c  game_internal.c  glad.c  hooks.c  inject.c  io.c  io.h  override.c  override.h  parse.c  renderer.c  trampoline.c  utils.c
src/tests/: test_trampoline.c
